# public-endorsement-service

./: .bazelignore  .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD  CHANGELOG.md  MODULE.bazel  README.md  devkit.json
build_defs/: pes_aws_enclave.bzl
build_defs/aws/: BUILD  pes.service  pes_ami.pkr.hcl  pes_watcher.sh  setup_pes_enclave.sh
docs/claims/: publisher.md  workload.md
java/com/google/pes/adapters/: BUILD  EndorsementMapper.java  PublisherPolicyMapper.java  SignatureMapper.java  StatementMapper.java  TLogReceiptMapper.java  VerificationMaterialMapper.java
java/com/google/pes/adapters/oidc/: AudienceHostname.java  BUILD  JwksUriProvider.java  OidcAudienceValidator.java  OidcDiscoveryFetcher.java  OidcJwksKeyFetcher.java  OidcJwksKeyLocator.java
java/com/google/pes/adapters/policy/: BUILD  S3PolicyProvider.java
java/com/google/pes/adapters/signatures/: BUILD  PublicKeyParser.java  SignatureGeneratorImpl.java  SignatureVerifierImpl.java
java/com/google/pes/adapters/statementvalidation/: BUILD  Claim.java  InTotoStatement.java  JsonPublisherIdProvider.java  OakPredicate.java  ResourceDescriptor.java
java/com/google/pes/adapters/tlog/: BUILD  TLedger.java  TLedgerCertBucketName.java  TLedgerCertName.java  TLedgerCertificatFetcher.java
java/com/google/pes/annotations/: BUILD  PolicyBucket.java  TLedgerUrl.java
java/com/google/pes/domain/: BUILD  CallerIdentity.java  JwtAuth.java  PreAuthenticationEncoding.java  PublicEndorsementService.java  PublisherVerifier.java
java/com/google/pes/domain/model/: BUILD  Endorsement.java  PublisherPolicy.java  Signature.java  Statement.java  TLogReceipt.java  VerificationMaterial.java
java/com/google/pes/domain/ports/: BUILD  InvalidSignatureException.java  InvalidVerificationMaterialException.java  PesSignatureException.java  PolicyException.java  PolicyProvider.java  PublisherIdProvider.java  SignatureGenerator.java  SignatureVerifier.java  TLog.java  TLogException.java
java/com/google/pes/proto/: BUILD
java/com/google/pes/server/: AwsInstanceMetadata.java  AwsResourceNames.java  AwsResourceNamesProvider.java  BUILD  ImdsClient.java  JwtInterceptor.java  PesArgs.java  PesGrpcHandler.java  PesModule.java  ServerMain.java
javatests/com/google/pes/adapters/: BUILD  EndorsementMapperTest.java  PublisherPolicyMapperTest.java  SignatureMapperTest.java  StatementMapperTest.java  TLogReceiptMapperTest.java  VerificationMaterialMapperTest.java
javatests/com/google/pes/adapters/policy/: BUILD  S3PolicyProviderTest.java
javatests/com/google/pes/adapters/signatures/: BUILD  PublicKeyParserTest.java  SignatureVerifierImplTest.java  SignerImplTest.java
javatests/com/google/pes/adapters/statementvalidation/: BUILD  ClaimTest.java  JsonPublisherIdProviderTest.java
javatests/com/google/pes/adapters/tlog/: BUILD  TLedgerCertificatFetcherTest.java  TLedgerTest.java
javatests/com/google/pes/domain/: BUILD  PreAuthenticationEncodingTest.java  PublicEndorsementServiceTest.java  PublisherVerifierTest.java
javatests/com/google/pes/server/: AwsResourceNamesProviderTest.java  BUILD  PesGrpcHandlerTest.java  PesModuleTest.java
javatests/com/google/pes/testdata/: BUILD
javatests/com/google/pes/testdata/intoto_v1_examples/invalid/: invalid_multiple_resources.json  missing_publisher_claim.json  missing_publisher_id.json  multiple_publisher_claim.json  subject_missing_digest.json
javatests/com/google/pes/testdata/intoto_v1_examples/valid/: correct_multiple_claims.json  correct_only_publisher_claim.json
toolchains/sysroot/: sysroot.yaml
